a1/brendan_gordon/TEST_PROGRAMS/invalidtype/david_zhou/invalid3.min
# assigning to an incorrect type

var x: int;
var y: float;

y = 1.0;
x = y;

